# AdventureAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  test.cpp  testgame.adv
src/: CMakeLists.txt  GameLoader.cpp  GameLoader.h  GameState.cpp  GameState.h  GameTree.cpp  GameTree.h
